--- a/frontend/src/styles/course-details.css
+++ b/frontend/src/styles/course-details.css
@@ -10,8 +10,7 @@
 	padding-left: 53px;
 	padding-right: 53px;
 	margin: 0 px;
-	width: 100vw;
-	max-width: 100%;
+	width: 100%;
 }
 
 .ClassPage {
@@ -20,6 +19,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin-bottom: 50px;
 }
 
 .ClassPage .class-info {
@@ -79,7 +79,7 @@
 .class-details {
 	display: flex;
 	flex-direction: row;
-	width: 100vw;
+	width: 100%;
 	padding-left: 53px;
 	padding-right: 53px;
 	gap: 20px;
@@ -117,4 +117,142 @@
 	text-align: left;
 	padding-left: 53px;
 	padding-right: 53px;
+}
+
+.instructor-rmp {
+	display: flex;
+	padding: 16px;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: var(--none, 0px);
+	align-self: stretch;
+	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+	border-radius: 5px;
+	min-width: 400px;
+	width: 100%;
+}
+
+.instructor-rmp .instructor-rmp__header {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+}
+
+.instructor-rmp .instructor-rmp__header .text {
+	color: var(--primary-main, var(--primary-main, #2196f3));
+	font-feature-settings: "clig" off, "liga" off;
+	font-family: Inter;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: 157%;
+	letter-spacing: 0.1px;
+	display: flex;
+	flex-direction: row;
+}
+
+.instructor-rmp .instructor-rmp__header .text .stats {
+	color: var(--primary-main, var(--primary-main, #2196f3));
+	font-feature-settings: "clig" off, "liga" off;
+	font-family: Inter;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 157%; /* 21.98px */
+	letter-spacing: 0.1px;
+}
+
+.instructor-rmp .instructor-name {
+	color: var(--text-primary, rgba(0, 0, 0, 0.87));
+	font-feature-settings: "clig" off, "liga" off;
+	font-family: Inter;
+	font-size: 15px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: 160%; /* 32px */
+	letter-spacing: 0.15px;
+	margin-bottom: 10px;
+}
+
+.instructor-info .instructors {
+	display: flex;
+	flex-direction: row;
+	gap: 20px;
+	width: 100%;
+}
+
+.instructor-semester {
+	width: 50%;
+}
+
+.course-reviews {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	text-align: left;
+	padding-left: 53px;
+	padding-right: 53px;
+}
+
+@media screen and (max-width: 900px) {
+	.ClassPage {
+		margin-bottom: 0px;
+	}
+	.class-details {
+		flex-direction: column;
+	}
+	.class-info-half {
+		width: 100%;
+	}
+	.instructor-rmp {
+		min-width: 0px;
+	}
+	.instructor-info .instructors {
+		flex-direction: column;
+	}
+	.instructor-semester {
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	/* change the size of everything */
+	.ClassPage .class-info .course-title-details {
+		flex-direction: column;
+		gap: 10px;
+	}
+	.ClassPage
+		.class-info
+		.course-title-details
+		.course-title-details-left
+		.top-text {
+		font-size: 12px;
+	}
+	.ClassPage
+		.class-info
+		.course-title-details
+		.course-title-details-left
+		.middle-text {
+		font-size: 20px;
+	}
+	.class-details__description {
+		font-size: 12px;
+	}
+	.instructor-rmp .instructor-rmp__header .text {
+		font-size: 12px;
+	}
+	.instructor-rmp .instructor-rmp__header .text .stats {
+		font-size: 12px;
+	}
+	.instructor-name {
+		font-size: 12px;
+	}
+	.instructor-info .instructors {
+		flex-direction: column;
+	}
+	.instructor-semester {
+		width: 100%;
+	}
 }
