--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -6,7 +6,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	width: 100vw;
+	width: 100%;
 }
 
 .title-header-h1-white {
@@ -36,7 +36,7 @@
 	padding: 10px 15px;
 	cursor: pointer;
 	transition: background-color 0.3s ease;
-	height: 100%;
+	height: 40px;
 	width: 70px;
 	border-radius: 3px;
 }
