--- a/frontend/src/styles/components.css
+++ b/frontend/src/styles/components.css
@@ -20,7 +20,7 @@
 	line-height: normal;
 }
 
-.login-component .login-component-button {
+.login-component-button {
 	display: flex;
 	height: 54px;
 	padding: var(--1, 8px) var(--none, 0px);
