--- a/backend/ClassWise/templates/ClassWise/search.html
+++ b/backend/ClassWise/templates/ClassWise/search.html
@@ -1,13 +1,14 @@
 <p3>Search Course</p3>
-    </div>
-        {% comment %} extend navbar {% endcomment %}
-        {% include './navbar.html' %}
-        {% comment %} text input field {% endcomment %}
-        {% comment %} TODO: use course form, add search button {% endcomment %}
-        <div class="col-md-4">
-            {% comment %} <input type="text" class="form-control" placeholder="Search Course"> {% endcomment %}
-        </div>
-        <div class="col-md-2">
-            <p3>My Profile</p3>
-        </div>
-    </div>
+{% comment %} {% include './navbar.html' %} {% endcomment %}
+<div class="col-md-4">
+	<form action="{% url 'home' %}" method="post">
+		{% csrf_token %}
+		<input
+			type="text"
+			class="form-control"
+			placeholder="Search Course"
+			name="course_code"
+		/>
+		<button type="submit" class="btn btn-primary">Search</button>
+	</form>
+</div>
