--- a/frontend/src/styles/course-details.css
+++ b/frontend/src/styles/course-details.css
@@ -234,7 +234,7 @@
 	width: 100%;
 	padding: 16px;
 	border-radius: 5px;
-	min-width: 30%;
+	min-width: 100%;
 	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
 }
 
@@ -243,7 +243,7 @@
 	border-radius: 5px;
 	display: flex;
 	flex-direction: column;
-	min-width: 30%;
+	min-width: 100%;
 	text-align: left;
 	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
 }
@@ -260,6 +260,17 @@
 .review-body h4 {
 	margin: 0px;
 	padding: 0px;
+}
+
+.averages-table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+.averages-table th,
+.averages-table td {
+	padding: 12px;
+	text-align: left;
 }
 
 @media screen and (max-width: 900px) {
