Update URLs and templates

--- a/backend/ClassWise/templates/ClassWise/navbar.html
+++ b/backend/ClassWise/templates/ClassWise/navbar.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a href="{% url 'home' %}" class="nav-link">Home</a>
+                <a href="{% url 'home' %}" class="nav-link">Search</a>
             </li>
         </ul>
     </div>
